--- a/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
@@ -107,7 +107,7 @@ ensure policy enforcement has not broken the application.
 Next, return to the customer web app. Recall that we simulated an attacker gaining control of that
 pod by executing a remote shell inside it.
 
-    kubectl exec -ti customer-<fill in pod ID> -c customer bash
+    `kubectl exec -ti customer-<fill in pod ID> -c customer bash`
 
 Repeat our attempt to access the database.
 
