--- a/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
@@ -111,7 +111,7 @@ pod by executing a remote shell inside it.
 
 Repeat our attempt to access the database.
 
-    curl -I http://database:2379/v2/keys?recursive=true
+    `curl -I http://database:2379/v2/keys?recursive=true`
 
 We have left out the JSON formatting because we do not expect to get a valid JSON response. This
 time we should get a `403 Forbidden` response. Only the account summary microservice has database
