helm install steps

--- a/calico/getting-started/kubernetes/managed-public-cloud/eks.mdx
+++ b/calico/getting-started/kubernetes/managed-public-cloud/eks.mdx
@@ -120,6 +120,28 @@ Before you get started, make sure you have downloaded and configured the [necess
    ```
 
 </TabItem>
+
+<TabItem label="Helm" value="Helm-2">
+
+1. Add {{prodname}} into your Helm repository.
+
+    ```batch
+    helm repo add projectcalico https://docs.projectcalico.org/charts
+    ```
+
+2. If you already have {{prodname}} added, you can update it to get the latest released version.
+
+    ```batch
+    helm repo update
+    ```
+
+3. Install version {{releaseTitle}} of the {{prodname}} operator and custom resource definitions.
+
+    ```batch
+    helm install calico projectcalico/tigera-operator --version {{releaseTitle}}
+    ```
+
+</TabItem>
 </Tabs>
 
 1. Finally, add nodes to the cluster.
