--- a/calico_versioned_docs/version-3.25/getting-started/kubernetes/managed-public-cloud/eks.mdx
+++ b/calico_versioned_docs/version-3.25/getting-started/kubernetes/managed-public-cloud/eks.mdx
@@ -87,7 +87,7 @@ Before you get started, make sure you have downloaded and configured the [necess
    kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
    ```
 
-1. Configure the {{prodname}} installation.
+2. Configure the {{prodname}} installation.
 
    ```batch
    kubectl create -f - <<EOF
@@ -113,11 +113,33 @@ Before you get started, make sure you have downloaded and configured the [necess
    kubectl apply -f {{manifestsUrl}}/manifests/calico-vxlan.yaml
    ```
 
-1. Configure {{prodname}} to disable AWS src/dst checks.
+2. Configure {{prodname}} to disable AWS src/dst checks.
 
    ```batch
    kubectl -n kube-system set env daemonset/calico-node FELIX_AWSSRCDSTCHECK=Disable
    ```
+
+</TabItem>
+
+<TabItem label="Helm" value="Helm-2">
+
+1. Add {{prodname}} into your Helm repository.
+
+    ```batch
+    helm repo add projectcalico https://docs.projectcalico.org/charts
+    ```
+
+2. If you already have {{prodname}} added, you can update it to get the latest released version.
+
+    ```batch
+    helm repo update
+    ```
+
+3. Install version {{releaseTitle}} of the {{prodname}} operator and custom resource definitions.
+
+    ```batch
+    helm install calico projectcalico/tigera-operator --version {{releaseTitle}}
+    ```
 
 </TabItem>
 </Tabs>
