--- a/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
@@ -38,7 +38,9 @@ With a {{prodname}} policy, you can mitigate risks to the banking application.
     kubectl create -f 30-policy.yaml
 
 
-Let's examine this policy piece by piece. It consists of three policy objects, one for each
+Let's examine this policy piece by piece. First, notice that an application layer policy looks like a regular {{prodname}} network policy. The only difference you'll see is the ability to use the application layer policy parameters in network policy. Another important difference is that you'll see HTTP traffic flows in Manager UI in features like Service Graph. 
+
+Next, there are three policy objects, one for each...
 microservice.
 
 ```yaml
