--- a/calico-enterprise/network-policy/application-layer-policies/alp.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp.mdx
@@ -13,7 +13,7 @@ Application layer policies let you limit access controls based on L7 attributes.
 
 ### Limitations
 - Application layer policy supports restricting only ingress traffic
-- Support for L7 attributes are limited to HTTP method, and URL exact/prefix path 
+- Support for L7 attributes are limited to HTTP method and URL exact/prefix path 
 - Supported protocols are limited to TCP-based protocols (for example, HTTP, HTTPS, or gRPC)
 - You can control application layer policies only at the cluster level (not per namespace) 
 
@@ -61,7 +61,7 @@ spec:
 ```
 ### Disable application layer policies
 
-To disable the policy, do one of the following steps:
+To disable the policies, do one of the following steps:
  - Set the `applicationLayerPolicy` field in the `ApplicationLayer` custom resource to `Disabled`.
  - Remove the `applicationLayerPolicy` field entirely.
  - Delete the ApplicationLayer` custom resource.
