--- a/calico-enterprise/network-policy/application-layer-policies/index.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/index.mdx
@@ -3,7 +3,7 @@ description: Use application layer policies to restrict ingress traffic based on
 hide_table_of_contents: true
 ---
 
-# Application Layer Policies (ALP) using Envoy as DaemonSet
+# Application layer policies to control ingress traffic
 
 import DocCardList from '@theme/DocCardList';
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
