--- a/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
@@ -1,11 +1,16 @@
 ---
-description: Learn how you can apply ALP to your workloads and control ingress traffic.
+description: Learn how to apply ALP to your workloads and control ingress traffic.
 ---
 
-# Enforce application layer policies on your apps (tutorial)
+# Application layer policy tutorial
 
-This tutorial demonstrates how to use {{prodname}} application layer policy to mitigate some common threats in a sample banking application.
+This tutorial shows how to use {{prodname}} application layer policy to restrict ingress traffic for applications and microservices.
 Assume that the application is installed in your {{prodname}} cluster and that the following application pods are running. 
+
+## Set up
+- A {{prodname}} cluster is running with application layer policy enabled
+- Cluster has three microservices: customer, database, summary
+- The customer web service should not have access to the backend database, but should have access to clients outside the cluster
 
 ```
 NAME                        READY     STATUS    RESTARTS   AGE
@@ -13,10 +18,6 @@ customer-2809159614-qqfnx   3/3       Running   0          21h
 database-1601951801-m4w70   3/3       Running   0          21h
 summary-2817688950-g1b3n    3/3       Running   0          21h
 ```
-
-Here, we have three microservices - customer, database, and summary. Only pods that need access to a service should get it.
-The customer web service does not need, and should not have direct access to the backend database. The customer web service needs to 
-directly interact with clients outside the cluster, some of whom may be malicious. 
 
 Imagine what would happen if an attacker were to gain control of the customer web pod in our
 application. Let's simulate this by executing a remote shell inside that pod.
@@ -30,16 +31,21 @@ Notice that from here, we get direct access to the backend database. For example
 (Piping to `python -m json.tool` nicely formats the output.)
 
 
-## Applying a network policy
+## Apply application layer policy
+
+In this step, we get the application layer policy YAML and apply it. Note that the policy scope is cluster-wide.
 
 With a {{prodname}} policy, you can mitigate risks to the banking application.
 
-    wget {{filesUrl}}/security/tutorials/app-layer-policy/manifests/30-policy.yaml
-    kubectl create -f 30-policy.yaml
+   ``` wget {{filesUrl}}/security/tutorials/app-layer-policy/manifests/30-policy.yaml
+       kubectl create -f 30-policy.yaml
+   ```
 
+Let's examine this policy piece by piece. First, notice that an application layer policy looks like a regular {{prodname}} network policy. 
+The only difference you'll see is the ability to use the application layer policy parameters in network policy. Another important difference
+is that you'll see HTTP traffic flows in Manager UI in features like Service Graph. 
 
-Let's examine this policy piece by piece. It consists of three policy objects, one for each
-microservice.
+Next, there are three policy objects, one for each microservice.
 
 ```yaml
 apiVersion: projectcalico.org/v3
@@ -113,6 +119,6 @@ Repeat our attempt to access the database.
 
     curl -I http://database:2379/v2/keys?recursive=true
 
-We have left out the JSON formatting because we do not expect to get a valid JSON response. This
+We omitted the JSON formatting because we do not expect to get a valid JSON response. This
 time we should get a `403 Forbidden` response. Only the account summary microservice has database
 access according to our policy.
