--- a/calico_versioned_docs/version-3.24/network-policy/istio/enforce-policy-istio.mdx
+++ b/calico_versioned_docs/version-3.24/network-policy/istio/enforce-policy-istio.mdx
@@ -144,7 +144,7 @@ calicoctl create -f 30-policy.yaml
 :::note
 
 You can also
-[view the manifest in your browser](files/30-policy.yaml).
+[view the manifest in your browser](/files/30-policy.yaml).
 
 :::
 
