--- a/calico-cloud_versioned_docs/version-3.15/operations/monitor/prometheus/byo-prometheus.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/operations/monitor/prometheus/byo-prometheus.mdx
@@ -83,7 +83,7 @@ export NAMESPACE=<my-prometheus-namespace>
 ```
 
 ```batch
-kubectl apply -f {{filesUrl}}/manifests/prometheus/elasticsearch-metrics-service-monitor.yaml -n $NAMESPACE
+kubectl apply -f {{filesUrl_CE}}/manifests/prometheus/elasticsearch-metrics-service-monitor.yaml -n $NAMESPACE
 ```
 
 The .yamls have no namespace defined so when you apply `kubectl`, it is applied in the $NAMESPACE.
@@ -124,7 +124,7 @@ export NAMESPACE=<my-prometheus-namespace>
 ```
 
 ```batch
-kubectl apply -f  {{filesUrl}}/manifests/prometheus/fluentd-metrics-service-monitor.yaml -n $NAMESPACE
+kubectl apply -f  {{filesUrl_CE}}/manifests/prometheus/fluentd-metrics-service-monitor.yaml -n $NAMESPACE
 ```
 
 The .yamls have no namespace defined so when you apply `kubectl`, it is applied in the $NAMESPACE.
@@ -165,7 +165,7 @@ export NAMESPACE=<my-prometheus-namespace>
 ```
 
 ```batch
-kubectl apply -f  {{filesUrl}}/manifests/prometheus/calico-node-monitor-service-monitor.yaml -n $NAMESPACE
+kubectl apply -f  {{filesUrl_CE}}/manifests/prometheus/calico-node-monitor-service-monitor.yaml -n $NAMESPACE
 ```
 
 The .yamls have no namespace defined so when you apply `kubectl`, it is applied in $NAMESPACE.
@@ -184,7 +184,7 @@ export NAMESPACE=<my-prometheus-namespace>
 ```
 
 ```batch
-kubectl apply -f  {{filesUrl}}/manifests/prometheus/kube-controller-metrics-service-monitor.yaml-n $NAMESPACE
+kubectl apply -f  {{filesUrl_CE}}/manifests/prometheus/kube-controller-metrics-service-monitor.yaml-n $NAMESPACE
 ```
 
 The .yamls have no namespace defined so when you apply `kubectl`, it is applied in the $NAMESPACE.
@@ -243,7 +243,7 @@ export NAMESPACE=<my-prometheus-namespace>
 ```
 
 ```batch
-kubectl apply -f  {{filesUrl}}/manifests/prometheus/felix-metrics-service-monitor.yaml -n $NAMESPACE
+kubectl apply -f  {{filesUrl_CE}}/manifests/prometheus/felix-metrics-service-monitor.yaml -n $NAMESPACE
 ```
 
 The .yamls have no namespace defined so when you apply `kubectl`, it is applied in the $NAMESPACE.
@@ -298,7 +298,7 @@ export NAMESPACE=<my-prometheus-namespace>
 ```
 
 ```batch
-kubectl apply -f  {{filesUrl}}/manifests/prometheus/typha-metrics-service-monitor.yaml -n $NAMESPACE
+kubectl apply -f  {{filesUrl_CE}}/manifests/prometheus/typha-metrics-service-monitor.yaml -n $NAMESPACE
 ```
 
 The .yamls have no namespace defined so when you apply `kubectl`, it is applied in the $NAMESPACE.
