--- a/calico-enterprise/network-policy/recommendations/policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/recommendations/policy-recommendations.mdx
@@ -57,6 +57,10 @@ The **Policy Recommendations** board is automatically displayed.
 - Policy recommendations are created as **staged network policies** so you can safely observe the traffic before enforcing them
 - To stop policy recommendations from being processed or updated for a namespace, click the **Action** menu, **Dismiss policy**. 
 
+:::note
+There are several legitimate reasons why you may not get policy recommendations, especially if you have put a default-deny policy in the default tier. If you are not getting any policy recommendations and want to test the tool, see [Troubleshoot policy recommendations](#troubleshoot-policy-recommendations).
+:::
+
 ### Activate and review policy recommendations
 
 Policy recommendations are not active until you move them to the **Policies Board**. 
@@ -97,9 +101,9 @@ Delete or rename the policy so a new staged network policy is recreated on the P
 1. On the Policies Recommendations board, click the **Active** tab, which lists the active staged network policies.
 1. Select the namespace, click the **Actions** menu, and click **Dismiss policy**.
 
-### Review runtime settings for workloads 
+### Review global settings for workloads 
 
-The default runtime settings for capturing flows for policy recommendations, are based on application workloads with *frequent communication with other namespaces in your cluster*. 
+The default global settings for capturing flows for policy recommendations are based on application workloads with *frequent communication with other namespaces in your cluster*. 
 
 Global settings for namespaces are found on the Policy Recommendations board, **Action** menu. 
 
