--- a/calico-enterprise_versioned_docs/version-3.15/_includes/release-notes/_v3.15.1-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/_includes/release-notes/_v3.15.1-release-notes.mdx
@@ -25,6 +25,7 @@
   from being propagated to Prometheus and Alertmanager.
 - Fixed a bug that caused Intrusion Detection Controller to restart whenever a managed cluster would disconnect.
 - CVE updates, most notably: updating our scratch based images to UBI 8.7, golang versions 1.18.9 or 1.19.5, ECK 2.5.0, Elasticsearch 7.17.7, Kibana 7.17.7.
+- Fixed a bug that prevented federated services from working for OpenShift
 
 ### Known issues
 
