--- a/calico-enterprise_versioned_docs/version-3.15/_includes/release-notes/_v3.15.0-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/_includes/release-notes/_v3.15.0-release-notes.mdx
@@ -7,6 +7,7 @@ See Chart Release 0 for "What's New".
 - Fixed a bug that caused servers not to trust the certificate of Dex, preventing users to login using an external identity provider.
 - Fixed a bug where Intrusion Detection Controller failed to create Syslog events due to constraints in its security context.
 - Fixed a bug where Anomaly Detection API failed to write to disk when persistent storage is configured due to constraints in its security context.
+- Fixed a bug that prevented federated services from working for OpenShift
 
 ## Known issues
 
