Add SELinux documentation for main and v3.16

--- a/calico-enterprise/_includes/content/_persistent-storage-terms.mdx
+++ b/calico-enterprise/_includes/content/_persistent-storage-terms.mdx
@@ -1,6 +1,6 @@
 ### Persistent volume
 
-Used by pods to persist storage within the cluster. Combined with **persistent volume claims**, pods can persist data across restarts and rescheduling.
+Used by pods to persist storage within the cluster. Combined with `PersistentVolumeClaim`, pods can persist data across restarts and rescheduling.
 
 ### Persistent volume claim
 
