--- a/calico-enterprise/operations/logstorage/create-storage.mdx
+++ b/calico-enterprise/operations/logstorage/create-storage.mdx
@@ -52,7 +52,7 @@ Before installing {{prodname}}, create a storage class named, `tigera-elasticsea
 
 #### Pre-provisioned local disks
 
-In the following example, we create a **StorageClass** to use when explicitly adding **PersistentVolumes** for local disks. This can be performed manually, or using the [sig-storage local static provisioner](https://github.com/kubernetes-sigs/sig-storage-local-static-provisioner).
+In the following example, we create a `StorageClass` to use when explicitly adding `PersistentVolume`s for local disks. This can be performed manually, or using the [sig-storage local static provisioner](https://github.com/kubernetes-sigs/sig-storage-local-static-provisioner).
 
 ```yaml
 apiVersion: storage.k8s.io/v1
@@ -64,9 +64,15 @@ volumeBindingMode: WaitForFirstConsumer
 reclaimPolicy: Retain
 ```
 
+:::note
+
+If local persistent volumes are provisioned on a SELinux-enabled host, you can use `/mnt/tigera` host path created by {{prodname}} policy package.
+
+:::
+
 #### AWS EBS disks
 
-In the following example for an AWS cloud provider integration, the **StorageClass** is based on [how your EBS disks are provisioned](https://docs.aws.amazon.com/eks/latest/userguide/ebs-csi.html):
+In the following example for an AWS cloud provider integration, the `StorageClass` is based on [how your EBS disks are provisioned](https://docs.aws.amazon.com/eks/latest/userguide/ebs-csi.html):
 
 <Tabs>
 <TabItem label="Amazon EBS CSI" value="Amazon EBS CSI-0">
@@ -106,7 +112,7 @@ volumeBindingMode: WaitForFirstConsumer
 
 #### AKS Azure Files storage
 
-In the following example for an AKS cloud provider integration, the **StorageClass** tells {{prodname}} to use LRS disks for log storage.
+In the following example for an AKS cloud provider integration, the `StorageClass` tells {{prodname}} to use LRS disks for log storage.
 :::note
 
 Premium Storage is recommended for databases greater than 100GiB and for production installations.
@@ -130,7 +136,7 @@ allowVolumeExpansion: true
 
 #### GCP Persistent Disks
 
-In the following example for a GKE cloud provider integration, the **StorageClass** tells {{prodname}} to use the GCE Persistent Disks for log storage.
+In the following example for a GKE cloud provider integration, the `StorageClass` tells {{prodname}} to use the GCE Persistent Disks for log storage.
 
 :::note
 
