Fix dead link issue

--- a/calico-enterprise_versioned_docs/version-3.14/operations/ebpf/ebpf-and-eks.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/operations/ebpf/ebpf-and-eks.mdx
@@ -227,4 +227,4 @@ Follow these steps if you want to switch from Calico's eBPF dataplane back to st
 
 ## Send us feedback
 
-We would love to hear about your experience with the eBPF dataplane. Please don’t hesitate to connect with us via the [Calico Users Slack](http://slack.projectcalico.org/) group.
+We would love to hear about your experience with the eBPF dataplane. Please don’t hesitate to connect with us via the [Calico Users Slack](https://slack.projectcalico.org/) group.
