--- a/calico-enterprise/network-policy/recommendations/policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/recommendations/policy-recommendations.mdx
@@ -105,6 +105,10 @@ Global settings for namespaces are found on the Policy Recommendations board, **
 
 ![Global settings dialog](/img/calico-enterprise/global-settings.png)
 
+- **Stabilization period** is the time that a recommended policy remains unchanged and stable so it can be enforced.
+
+- **Interval** is the frequency to run the policy recommendation to create and refine recommended policies. 
+
 :::tip
 For application workloads with less frequent communication, the sampling for flow logs may not be long enough, so you’ll want to increase one or both settings. We recommend that you review your workloads immediately after you enable policy recommendations and adjust the settings accordingly. 
 :::
