--- a/calico-enterprise/network-policy/recommendations/policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/recommendations/policy-recommendations.mdx
@@ -105,12 +105,12 @@ Global settings for namespaces are found on the Policy Recommendations board, **
 
 ![Global settings dialog](/img/calico-enterprise/global-settings.png)
 
-- **Stabilization period** is the time to capture enough flow logs to/from the namespace to so a policy recommendation is an accurate reflection of the traffic. 
+- **Stabilization period** is the time to capture enough flow logs to/from the namespace so a policy recommendation is an accurate reflection of the traffic. T
 
 - **Interval** is the frequency to run the policy recommendation to create/refine recommended policies. 
 
 :::tip
-For application workloads with less frequent communication, the stabilization and interval may not be long enough, so you’ll want to increase one or both settings. We recommend that you review your workloads immediately after you enable policy recommendations and adjust the settings accordingly. 
+For application workloads with less frequent communication, the stabilization period setting may not be long enough to accurate traffic, so you’ll want to increase the time. We recommend that you review your workloads immediately after you enable policy recommendations and adjust the settings accordingly. 
 :::
 
 To update runtime settings for an existing staged policy recommendation, delete or rename the policy so a new staged network policy is recreated on the Policy Recommendations board.
