--- a/calico-enterprise/network-policy/recommendations/policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/recommendations/policy-recommendations.mdx
@@ -105,7 +105,7 @@ Global settings for namespaces are found on the Policy Recommendations board, **
 
 ![Global settings dialog](/img/calico-enterprise/global-settings.png)
 
-- **Stabilization period** is the time (default 10 minutes) to capture enough flow logs to/from the namespace so a policy recommendation is an accurate reflection of the traffic. 
+- **Stabilization period** is the learning time (default 10 minutes) to capture flow logs to/from the namespace so a policy recommendation accurately reflects the traffic. 
 
 - **Interval** is the frequency to run the policy recommendation to create/refine recommended policies. 
 
