--- a/calico_versioned_docs/version-3.24/reference/involved.mdx
+++ b/calico_versioned_docs/version-3.24/reference/involved.mdx
@@ -12,7 +12,7 @@ project, please take a look at the following.
 
 ## Join us on Slack
 
-Our [public slack](https://slack.projectcalico.org) is the quickest way to get
+Our [public slack](https://calicousers.slack.com) is the quickest way to get
 in touch for help debugging any issues with Calico.
 
 ## Read the source, Luke!
