--- a/calico-enterprise_versioned_docs/version-3.16/networking/egress/egress-gateway-azure.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/networking/egress/egress-gateway-azure.mdx
@@ -261,7 +261,7 @@ must have a cluster ID - typically an unused IPv4 address.
 To configure a node to be a route reflector with cluster ID 244.0.0.1, run the following command:
 
 ```bash
-calicoctl patch node <node name> -p '{"spec": {"bgp": {"routeReflectorClusterID": "244.0.0.1"}}}'
+kubectl annotate node <node name> projectcalico.org/RouteReflectorClusterID=244.0.0.1
 ```
 
 Typically, you will want to label this node to indicate that it is a route reflector, allowing it to be easily selected by a BGPPeer resource. You can do this with kubectl. For example:
@@ -336,7 +336,7 @@ In the default **FelixConfiguration**, set the `egressIPSupport` field to `Enabl
 support on a per-namespace basis only:
 
 ```bash
-kubectl patch felixconfiguration.p default --type='merge' -p \
+kubectl patch felixconfiguration default --type='merge' -p \
     '{"spec":{"egressIPSupport":"EnabledPerNamespace"}}'
 ```
 
