--- a/calico-enterprise_versioned_docs/version-3.16/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/networking/egress/egress-gateway-on-prem.mdx
@@ -189,14 +189,14 @@ In the default **FelixConfiguration**, set the `egressIPSupport` field to `Enabl
 support on a per-namespace basis only:
 
 ```bash
-kubectl patch felixconfiguration.p default --type='merge' -p \
+kubectl patch felixconfiguration default --type='merge' -p \
     '{"spec":{"egressIPSupport":"EnabledPerNamespace"}}'
 ```
 
 Or for support both per-namespace and per-pod:
 
 ```bash
-kubectl patch felixconfiguration.p default --type='merge' -p \
+kubectl patch felixconfiguration default --type='merge' -p \
     '{"spec":{"egressIPSupport":"EnabledPerNamespaceOrPerPod"}}'
 ```
 
