--- a/calico-enterprise/networking/egress/external-network.mdx
+++ b/calico-enterprise/networking/egress/external-network.mdx
@@ -51,14 +51,14 @@ In the default **FelixConfiguration**, set the `egressIPSupport` field to `Enabl
 `EnabledPerNamespaceOrPerPod`, according to the level of support that you need in your cluster. For support on a per-namespace basis only:
 
 ```bash
-kubectl patch felixconfiguration.p default --type='merge' -p \
+kubectl patch felixconfiguration default --type='merge' -p \
     '{"spec":{"egressIPSupport":"EnabledPerNamespace"}}'
 ```
 
 Or for support both per-namespace and per-pod:
 
 ```bash
-kubectl patch felixconfiguration.p default --type='merge' -p \
+kubectl patch felixconfiguration default --type='merge' -p \
     '{"spec":{"egressIPSupport":"EnabledPerNamespaceOrPerPod"}}'
 ```
 
@@ -67,7 +67,7 @@ kubectl patch felixconfiguration.p default --type='merge' -p \
 In the default **FelixConfiguration**, set the `externalNetworkSupport` field to `Enabled`.
 
 ```bash
-kubectl patch felixconfiguration.p default --type='merge' -p \
+kubectl patch felixconfiguration default --type='merge' -p \
     '{"spec":{"externalNetworkSupport":"Enabled"}}'
 ```
 
