Add screenshot and secton

--- a/calico-enterprise/network-policy/recommendations/policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/recommendations/policy-recommendations.mdx
@@ -14,6 +14,15 @@ One of the best practices for improving the security posture of your Kubernetes 
 
 {{prodname}} makes it easy for platform operators to implement namespace isolation without experience in authoring network policy or detailed knowledge of how application workloads are communicating. {{prodname}} analyzes the flow logs that are generated from workloads, and automatically recommends and stages policies for each namespace that can be used for isolation.
 
+## Concepts
+
+Policy recommendations are most helpful during early stages of implementing {{prodname}} when you may not have a default deny policy in place. When you enable policy recommendations, an ingress default-deny policy rule is automatically added for every namespace to isolate it from external communication. 
+
+![rule-default-deny](/img/calico-enterprise/rule-default-deny.png)
+
+In the following example, the scope of the policy is namespace, `ns2`. Based on observed flows, a policy recommendation is created for `ns2` that allows ingress
+traffic only from `ns1`, port 80, using TCP. All other ingress traffic is denied.
+
 ## Before you begin
 
 **Required**
@@ -22,7 +31,7 @@ To enable/disable policy recommendations, you must have the **tigera-admin** rol
 
 **Recommended**
 
-Basic knowledge of policies and tiers:
+Basic knowledge of policies in Manager UI and tiers:
 - [Get started with tiered network policy](../network-policy/policy-tiers/tiered-policy)
 - [Network policy tutorial](../network-policy/policy-tiers/policy-tutorial-ui)
 
