--- a/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
@@ -2,57 +2,21 @@
 
 ### What's new {#whats-new-3.16.0}
 
-#### Egress gateways for AKS and Azure
+| ![marquee-feature](/img/calico-enterprise/marquee-feature.png) | Description...                                               | Doc link                                                     | Blogs |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ | ----- |
+| Policy recommendations                                       | Improve the security posture of your Kubernetes cluster in the early stages of onboarding with {{prodname}}, by implementing automatic namespace isolation with network policy. Namespace isolation helps to implement a zero-trust and least-privileged security model, where only required communication between namespaces are authorized and everything else is blocked. This helps mitigate the risk of lateral movement within a cluster in the event of an attack.<br /><br />Just enable policy recommendations, and get staged network policy that is ready to view. | https://deploy-preview-409--tigera.netlify.app/calico-enterprise/next/network-policy/recommendations/policy-recommendations | TBD   |
 
-{{prodname}} has added egress gateway support for Microsoft Azure and AKS.
-egress gateways allow you to identify the namespaces associated with egress traffic outside your cluster.
+## Improvements
 
-For more information, see [Configure egress gateways, Azure](../../networking/egress/egress-gateway-azure.mdx).
+| Category        | {{prodname}} feature                        | Improvement                                                  | Doc link                                                     |
+| --------------- | ------------------------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| Threat defense  | WAF UI                                      | Enable WAF in Manager UI.                                    | https://docs.tigera.io/calico-enterprise/3.16/threat/web-application-firewall |
+|                 | Anomaly detection                           | When an anomaly detection job is disabled, and appropriate **metadata** is not available (e.g. processes, tcp stats), provide help on the configuration required to enable it. | https://docs.tigera.io/calico-enterprise/3.16/threat/anomaly-detection/security-anomalies |
+| Network policy  | DNS rules in                                | Leverage [NodeLocal DNSCache](https://kubernetes.io/docs/tasks/administer-cluster/nodelocaldns/) to improve the performance of DNS services running with the cluster. Secure egress access for application workloads while ensuring the best possible performance for DNS services. | https://docs.tigera.io/calico-enterprise/3.16/network-policy/domain-based-policy |
+| Data encryption | WireGuard support for AKS/EKS               | Enable WireGuard to secure on-the-wire, in-cluster pod traffic in {{prodname}} cluster for AKS/EKS. | https://docs.tigera.io/calico-enterprise/3.16/compliance/encrypt-cluster-pod-traffic |
+| Networking      | Destination-base routing for egress gateway | Designate different egress gateways depending on the target destination.  Define multiple egress gateways in a namespace or pod so that traffic intended for internet could be routed through one egress gateway where traffic intended for an internal subnet can be routed through another egress gateway. | TBD                                                          |
+| Log storage     | Linseed API                                 | A new service for accessing Elasticsearch and new index patterns for log storage. | https://docs.tigera.io/calico-enterprise/3.16/reference/architecture/overview |
 
-#### Operator-managed deployments of egress gateways
-
-{{prodname}} now includes Operator-managed deployments of egress gateways.
-This reduces operational overhead and eliminates additional steps required during upgrades.
-
-For more information, see [Egress gateways](../networking/egress/).
-
-#### UI for workload-based web application firewalls
-
-{{prodname}} includes a new UI that can be used to enable and configure a workload-based web application firewall.
-
-For more information, see [Workload-based web application firewall](../../threat/web-application-firewall.mdx#manager-ui).
-
-#### Service Graph performance optimizations
-
-This release of {{prodname}} includes several optimizations to improve the performance of Service Graph for clusters with larger numbers of namespaces.
-
-#### Revised installation steps for Rancher RKE2
-
-{{prodname}} has revised the installation steps for Rancher RKE2 to accommodate options available in the most recent versions of that platform.
-
-<!--The following anchor text and link need to be updated to /rke2.mdx after updates are incorporated-->
-For more information, see [Rancher Manager](../../getting-started/install-on-clusters/rancher-ui.mdx).
-
-#### Improvements to Envoy to accommodate advanced ingress controllers
-
-{{prodname}} includes improvements to its Envoy deployment to enable customers to use this feature in clusters with ingress controllers that perform advanced load balancing.
-
-For more information, see [Workload-based web application firewall](../../threat/web-application-firewall.mdx).
-
-#### Support for multiple external networks
-
-{{prodname}} includes networking options that allows pods from different namespaces to egress onto different external networks (Virtual Routing Functions or VRFs) that may have overlapping IPs with each other.
-This also enables administrators to configure which service IPs are advertised for a network by the service IP advertisement feature.
-
-For more information, see [Configure egress traffic to multiple external networks](../../networking/egress/external-network.mdx).
-
-#### Improved product security with more restrictive `SecurityContext`
-
-{{prodname}} has updated its components to apply a more restrictive `SecurityContext` where applicable.
-This includes the following:
-* Non-root context whenever possible and added drop ALL `Capabilities`
-* Root context and privilege escalation are used only when necessary
-* `SeccompProfile` is set to `RuntimeDefault`
 
 ## Known issues
 
