--- a/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
@@ -1,12 +1,16 @@
 15 February 2023
 
-### What's new {#whats-new-3.16.0}
+## What's new {#whats-new-3.16.0}
 
-| ![marquee-feature](/img/calico-enterprise/marquee-feature.png) | Description...                                               | Doc link                                                     | Blogs |
+![marquee-feature](/img/calico-enterprise/marquee.png)
+
+| Feature | Description...                                               | Doc link                                                     | Blogs |
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ | ----- |
-| Policy recommendations                                       | Improve the security posture of your Kubernetes cluster in the early stages of onboarding with {{prodname}}, by implementing automatic namespace isolation with network policy. Namespace isolation helps to implement a zero-trust and least-privileged security model, where only required communication between namespaces are authorized and everything else is blocked. This helps mitigate the risk of lateral movement within a cluster in the event of an attack.<br /><br />Just enable policy recommendations, and get staged network policy that is ready to view. | https://deploy-preview-409--tigera.netlify.app/calico-enterprise/next/network-policy/recommendations/policy-recommendations | TBD   |
+| Policy recommendations                                       | Improve the security posture of your Kubernetes cluster in the early stages of onboarding with {{prodname}}, by implementing automatic namespace isolation with network policy. Namespace isolation helps to implement a zero-trust and least-privileged security model, where only required communication between namespaces are authorized and everything else is blocked. This helps mitigate the risk of lateral movement within a cluster in the event of an attack.<br /><br />Just enable policy recommendations and get a staged network policy for viewing traffic . | https://deploy-preview-409--tigera.netlify.app/calico-enterprise/next/network-policy/recommendations/policy-recommendations | TBD   |
 
-## Improvements
+
+
+### Improvements
 
 | Category        | {{prodname}} feature                        | Improvement                                                  | Doc link                                                     |
 | --------------- | ------------------------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
@@ -18,7 +22,7 @@
 | Log storage     | Linseed API                                 | A new service for accessing Elasticsearch and new index patterns for log storage. | https://docs.tigera.io/calico-enterprise/3.16/reference/architecture/overview |
 
 
-## Known issues
+### Known issues
 
 * L7 log collection fails to deploy on CIS hardened clusters. As a result, some cards in the manager UI dashboard will not display any metrics.
 * Upgrading to {{prodname}} 3.16.0 on Rancher/RKE from {{prodname}} 3.13.0 currently requires manually terminating the calico-node container for upgrade to proceed.
