--- a/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
@@ -6,8 +6,7 @@
 
 | Feature | Description...                                               | Doc link                                                     | Blogs |
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ | ----- |
-| Policy recommendations                                       | Improve the security posture of your Kubernetes cluster in the early stages of onboarding with {{prodname}}, by implementing automatic namespace isolation with network policy. Namespace isolation helps to implement a zero-trust and least-privileged security model, where only required communication between namespaces are authorized and everything else is blocked. This helps mitigate the risk of lateral movement within a cluster in the event of an attack.<br /><br />Just enable policy recommendations and get a staged network policy for viewing traffic . | https://deploy-preview-409--tigera.netlify.app/calico-enterprise/next/network-policy/recommendations/policy-recommendations | TBD   |
-
+| Policy recommendations                                       | Improve the security posture of your Kubernetes cluster in the early stages of onboarding with {{prodname}}, by implementing automatic namespace isolation with network policy. Namespace isolation helps to implement a zero-trust and least-privileged security model, where only required communication between namespaces are authorized and everything else is blocked. This helps mitigate the risk of lateral movement within a cluster in the event of an attack.<br /><br />Just enable policy recommendations and get a staged network policy for viewing traffic . | TBD | TBD   |
 
 
 ### Improvements
