--- a/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
@@ -11,14 +11,13 @@
 
 ### Improvements
 
-| Category        | {{prodname}} feature                        | Improvement                                                  | Doc link                                                     |
 | --------------- | ------------------------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| Threat defense  | WAF UI                                      | Enable WAF in Manager UI.                                    | https://docs.tigera.io/calico-enterprise/3.16/threat/web-application-firewall |
-|                 | Anomaly detection                           | When an anomaly detection job is disabled, and appropriate **metadata** is not available (e.g. processes, tcp stats), provide help on the configuration required to enable it. | https://docs.tigera.io/calico-enterprise/3.16/threat/anomaly-detection/security-anomalies |
-| Network policy  | DNS rules in                                | Leverage [NodeLocal DNSCache](https://kubernetes.io/docs/tasks/administer-cluster/nodelocaldns/) to improve the performance of DNS services running with the cluster. Secure egress access for application workloads while ensuring the best possible performance for DNS services. | https://docs.tigera.io/calico-enterprise/3.16/network-policy/domain-based-policy |
-| Data encryption | WireGuard support for AKS/EKS               | Enable WireGuard to secure on-the-wire, in-cluster pod traffic in {{prodname}} cluster for AKS/EKS. | https://docs.tigera.io/calico-enterprise/3.16/compliance/encrypt-cluster-pod-traffic |
+| Threat defense  | WAF UI                                      | Enable WAF in Manager UI.                                    | [WAF](https://docs.tigera.io/calico-enterprise/3.16/threat/web-application-firewall) |
+|                 | Anomaly detection                           | When an anomaly detection job is disabled, and appropriate **metadata** is not available (e.g. processes, tcp stats), provide help on the configuration required to enable it. | [Anomaly detection](https://docs.tigera.io/calico-enterprise/3.16/threat/anomaly-detection/security-anomalies) |
+| Network policy  | DNS rules in                                | Leverage [NodeLocal DNSCache](https://kubernetes.io/docs/tasks/administer-cluster/nodelocaldns/) to improve the performance of DNS services running with the cluster. Secure egress access for application workloads while ensuring the best possible performance for DNS services. | [DNS policy](https://docs.tigera.io/calico-enterprise/3.16/network-policy/domain-based-policy) |
+| Data encryption | WireGuard support for AKS/EKS               | Enable WireGuard to secure on-the-wire, in-cluster pod traffic in {{prodname}} cluster for AKS/EKS. | [Enable encryption with WireGuard](https://docs.tigera.io/calico-enterprise/3.16/compliance/encrypt-cluster-pod-traffic) |
 | Networking      | Destination-base routing for egress gateway | Designate different egress gateways depending on the target destination.  Define multiple egress gateways in a namespace or pod so that traffic intended for internet could be routed through one egress gateway where traffic intended for an internal subnet can be routed through another egress gateway. | TBD                                                          |
-| Log storage     | Linseed API                                 | A new service for accessing Elasticsearch and new index patterns for log storage. | https://docs.tigera.io/calico-enterprise/3.16/reference/architecture/overview |
+| Log storage     | Linseed API                                 | A new service for accessing Elasticsearch and new index patterns for log storage. | [{{prodname}} architecture diagram](https://docs.tigera.io/calico-enterprise/3.16/reference/architecture/overview) |
 
 
 ### Known issues
