--- a/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
@@ -11,6 +11,7 @@
 
 ### Improvements
 
+| Category        | {{prodname}} feature                        | Improvement                                                  | Doc link                                                     |
 | --------------- | ------------------------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | Threat defense  | WAF UI                                      | Enable WAF in Manager UI.                                    | [WAF](https://docs.tigera.io/calico-enterprise/3.16/threat/web-application-firewall) |
 |                 | Anomaly detection                           | When an anomaly detection job is disabled, and appropriate **metadata** is not available (e.g. processes, tcp stats), provide help on the configuration required to enable it. | [Anomaly detection](https://docs.tigera.io/calico-enterprise/3.16/threat/anomaly-detection/security-anomalies) |
