--- a/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
@@ -1,22 +1,6 @@
-15 February 2023
+xx March 2023
 
-### What's new {#whats-new-3.16.0}
-
-#### Egress gateways for AKS and Azure
-
-{{prodname}} has added egress gateway support for Microsoft Azure and AKS.
-egress gateways allow you to identify the namespaces associated with egress traffic outside your cluster.
-
-For more information, see [Configure egress gateways, Azure](../../networking/egress/egress-gateway-azure.mdx).
-
-#### Operator-managed deployments of egress gateways
-
-{{prodname}} now includes Operator-managed deployments of egress gateways.
-This reduces operational overhead and eliminates additional steps required during upgrades.
-
-For more information, see [Egress gateways](../networking/egress/).
-
-#### UI for workload-based web application firewalls
+### What's new {#whats-new-3.16.1}
 
 {{prodname}} includes a new UI that can be used to enable and configure a workload-based web application firewall.
 
