--- a/calico-enterprise/getting-started/install-on-clusters/aks.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/aks.mdx
@@ -2,7 +2,7 @@
 description: Install Calico Enterprise for an AKS cluster.
 ---
 
-# Microsoft Azure Kubernetes Service (AKS)
+# AKS
 
 ## Big picture
 
