--- a/calico-enterprise_versioned_docs/version-3.15/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/networking/egress/egress-gateway-on-prem.mdx
@@ -295,7 +295,7 @@ spec:
         command: ["/init-gateway.sh"]
         image: {{registry}}{% component_image("egress-gateway") %}
         env:
-         Use downward API to tell the pod its own IP address.
+         # Use downward API to tell the pod its own IP address.
         - name: EGRESS_POD_IP
           valueFrom:
             fieldRef:
